[project]
name = "trade-optimisation-data-viewer"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Josh Kirk", email = "59419126+this-josh@users.noreply.github.com" }
]
dependencies = [
    "streamlit>=1.42.0",
    "dill>=0.3.9",
    "numpy>=2.2.3",
    "watchdog>=6.0.0",
    "plotly==5.22.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/trade_optimisation_data_viewer"]
